style.css
/* ... */
.pb-6 {
  padding-block: calc(var(--spacing-const) * 6);
}
.pb-7 {
  padding-block: calc(var(--spacing-const) * 7);
}
.pb-8 {
  padding-block: calc(var(--spacing-const) * 8);
}
.pb-9 {
  padding-block: calc(var(--spacing-const) * 9);
}
.pb-10 {
  padding-block: calc(var(--spacing-const) * 10);
}
.pb-11 {
  padding-block: calc(var(--spacing-const) * 11);
}
.pb-12 {
  padding-block: calc(var(--spacing-const) * 12);
}
.pb-13 {
  padding-block: calc(var(--spacing-const) * 13);
}
.pb-14 {
  padding-block: calc(var(--spacing-const) * 14);
}
.pb-15 {
  padding-block: calc(var(--spacing-const) * 15);
}
.pb-16 {
  padding-block: calc(var(--spacing-const) * 16);
}
.pb-17 {
  padding-block: calc(var(--spacing-const) * 17);
}
.pb-18 {
  padding-block: calc(var(--spacing-const) * 18);
}
.pb-19 {
  padding-block: calc(var(--spacing-const) * 19);
}
.pb-20 {
  padding-block: calc(var(--spacing-const) * 20);
}
.pb-21 {
  padding-block: calc(var(--spacing-const) * 21);
}
.pb-22 {
  padding-block: calc(var(--spacing-const) * 22);
}
.pb-23 {
  padding-block: calc(var(--spacing-const) * 23);
}
.pb-24 {
  padding-block: calc(var(--spacing-const) * 24);
}
.pb-25 {
  padding-block: calc(var(--spacing-const) * 25);
}
.pb-26 {
  padding-block: calc(var(--spacing-const) * 26);
}
.pb-27 {
  padding-block: calc(var(--spacing-const) * 27);
}
.pb-28 {
  padding-block: calc(var(--spacing-const) * 28);
}
.pb-29 {
  padding-block: calc(var(--spacing-const) * 29);
}

.pi-0 {
  padding-inline: calc(var(--spacing-const) * 0);
}
.pi-1 {
  padding-inline: calc(var(--spacing-const) * 1);
}
.pi-2 {
  padding-inline: calc(var(--spacing-const) * 2);
}
.pi-3 {
  padding-inline: calc(var(--spacing-const) * 3);
}
.pi-4 {
  padding-inline: calc(var(--spacing-const) * 4);
}
.pi-5 {
  padding-inline: calc(var(--spacing-const) * 5);
}
.pi-6 {
  padding-inline: calc(var(--spacing-const) * 6);
}
.pi-7 {
  padding-inline: calc(var(--spacing-const) * 7);
}
.pi-8 {
  padding-inline: calc(var(--spacing-const) * 8);
}
.pi-9 {
  padding-inline: calc(var(--spacing-const) * 9);
}
.pi-10 {
  padding-inline: calc(var(--spacing-const) * 10);
}
.pi-11 {
  padding-inline: calc(var(--spacing-const) * 11);
}
.pi-12 {
  padding-inline: calc(var(--spacing-const) * 12);
}
.pi-13 {
  padding-inline: calc(var(--spacing-const) * 13);
}
.pi-14 {
  padding-inline: calc(var(--spacing-const) * 14);
}
.pi-15 {
  padding-inline: calc(var(--spacing-const) * 15);
}
.pi-16 {
  padding-inline: calc(var(--spacing-const) * 16);
}
.pi-17 {
  padding-inline: calc(var(--spacing-const) * 17);
}
.pi-18 {
  padding-inline: calc(var(--spacing-const) * 18);
}
.pi-19 {
  padding-inline: calc(var(--spacing-const) * 19);
}
.pi-20 {
  padding-inline: calc(var(--spacing-const) * 20);
}
.pi-21 {
  padding-inline: calc(var(--spacing-const) * 21);
}
.pi-22 {
  padding-inline: calc(var(--spacing-const) * 22);
}
.pi-23 {
  padding-inline: calc(var(--spacing-const) * 23);
}
.pi-24 {
  padding-inline: calc(var(--spacing-const) * 24);
}
.pi-25 {
  padding-inline: calc(var(--spacing-const) * 25);
}
.pi-26 {
  padding-inline: calc(var(--spacing-const) * 26);
}
.pi-27 {
  padding-inline: calc(var(--spacing-const) * 27);
}
.pi-28 {
  padding-inline: calc(var(--spacing-const) * 28);
}
.pi-29 {
  padding-inline: calc(var(--spacing-const) * 29);
}
/* ############################################################################################################## */

body {
  background-color: #dbd7ff;

  /* min-height: 300vh; */
  /* padding-bottom: 30rem; */

  position: relative;
}

.header {
  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-inline: 1rem;
  padding-block: 1rem;
  margin-inline: 1rem;

  background-color: var(--body-bg);
  -webkit-box-shadow: -200px 0px 0px 0px var(--body-bg),
    200px 0px 0px 0px var(--body-bg);
  -moz-box-shadow: -200px 0px 0px 0px var(--body-bg),
    200px 0px 0px 0px var(--body-bg);
  box-shadow: -200px 0px 0px 0px var(--body-bg),
    200px 0px 0px 0px var(--body-bg);

  position: sticky;
  top: -5rem;
  z-index: 10;

  animation: stickynav linear forwards;
  animation-timeline: view();
  animation-range-start: 130vh;
  animation-range-end: 150vh;
  backdrop-filter: blur(21px);
  /* border: 1px solid red; */

  @media (min-width: 1200px) {
    margin-inline: 4.5rem;
  }
}

@keyframes stickynav {
  100% {
    top: 1.5rem;
    background-color: rgba(33, 74, 50, 0.5);
    border-radius: 100vw;
    box-shadow: none;
  }
}

/* .header.sticky {
  position: fixed;
  top: 1rem;
  left: 1rem;
  right: 1rem;
  border-radius: 100vw;
  padding-inline: 1rem;
  background-color: rgba(33, 74, 50, 0.5);
  backdrop-filter: blur(21px);
  @media (min-width: 1200px) {
    left: 4.5rem;
    right: 4.5rem;
  }
  z-index: 100;
} */

.logo {
  flex-shrink: 0;
  width: 132px;

  @media (min-width: 800px) {
    width: 184px;
  }
}

.primary-nav {
  display: flex;
  gap: 1.5rem;
}

.nav-items {
  display: none;

  list-style: none;
  padding: 0;
  margin: 0;
  gap: 1.5rem;

  @media (min-width: 1200px) {
    display: flex;
  }
}

.nav-link {
  text-decoration: none;
  text-transform: capitalize;
  color: var(--link-clr);
  font-weight: 600;
  padding: 0.5rem;
  transition: color 250ms;
  &:hover {
    color: var(--secondary-clr);
  }
}

.login {
  display: none;
  list-style: none;
  margin: 0;
  padding: 0;
  @media (min-width: 1200px) {
    display: flex;
  }

  @media (max-width: 800px) {
    display: flex;
    --gap: 0;
  }
}

.header.sticky .login {
  @media (max-width: 800px) {
    display: none;
  }
}
/* ... */

